added campfires
Signed-off-by: Yamahari <40495288+Yamahari@users.noreply.github.com>